# -ece4140_f24_ravens

./: README.md
DS3231/: CMakeLists.txt  I2C_application1.c  READ_ME.md
I2C_code/: I2C_initialization.c  README.md  watchdog_example.c
Watchdog&UART/: CMakeLists.txt  README.md  circular_buffer.c  circular_buffer.h  code.c  picoedub.h
i2c_to_MCP4725/: README.md
i2c_to_MCP4725/sinusoidal_wave/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  m4DAC1.c
i2c_to_MCP4725/triangle_wave/: CMakeLists.txt  circular_buffer.c  m4DAC2.c  picoedub.h
m4_ADC_LM45_TempSensor/: CMakeLists.txt  cb.h  m4_ADC_LM45_TempSensor.c  picoedub.c
m4_ADC_LM45_TempSensor _Interrupt/: CMakeLists.txt  m4_ADC_LM45_TempSensor_interrupt.c  picoedub.c  picoedub.h
m4_ADC_Pot/: CMakeLists.txt  cb.c  m4_ADC_Pot.c  picoedub.h
m4_ADC_VEMT2520_LightSensor/: CMakeLists.txt  m4_ADC_VEMT2520_LightSensor.c  picoedub.h
